--- a/etch-a-sketch.css
+++ b/etch-a-sketch.css
@@ -4,14 +4,19 @@ body {
 
 #grid-container {
     display: flex;
+    flex-direction: column;
     width: 80%;
     height: 80%;
 }
 
-.box {
+.box-row {
     display: flex;
-    border: 2px solid red;
-    width: 25%;
-    height: 25%;
+    flex-direction: row;
+    border: 2px solid blue;
     margin: 5px;
+}
+
+.box {
+    border: 2px solid red;
+    margin: 5px;    
 }
