focus and hover states

--- a/etch-a-sketch.css
+++ b/etch-a-sketch.css
@@ -21,10 +21,14 @@ body {
     height: 50px;
 }
 
-
 .grid-square:hover {
     background-color: black;
 }
+
+.grid-square:focus {
+    background-color: darkgray;
+}
+
 
 .button-1 {
   background-color: #EA4C89;
