get grid height and width, cleargrid, setup draw

--- a/etch-a-sketch.css
+++ b/etch-a-sketch.css
@@ -36,14 +36,18 @@ body {
     height: 50px;
 }
 
+/* 
 .grid-square:hover {
     background-color: black;
 }
 
 .grid-square:focus {
     background-color: darkgray;
-}
+} */
 
+.colored-class {
+    background-color: black;
+}
 
 .button-1 {
   background-color: #EA4C89;
